--- a/game.css
+++ b/game.css
@@ -19,13 +19,14 @@
   background-color: rgb(226, 104, 104);
   align-content: center;
   align-self: center;
-  border-style: double;
+  width: 99vw;
 }
 
 #scores {
-  background-color: rgb(247, 134, 241);
+  background-color: rgb(248, 245, 59);
   align-content: center;
   align-self: center;
+  width: 99vw;
 }
 
 .location {
@@ -43,6 +44,11 @@
 h1 {
   font-family: Verdana;
   text-decoration: underline;
+  transition: font-size 1s;
+}
+
+h1:hover {
+  font-size: 40px;
 }
 
 p {
